SVG img fallback for old versions of IE (<= 8)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<title>Made by Form</title>
+  <title>Made by Form</title>
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro">
-	<link rel="stylesheet" href="/css/screen.css">
+  <link rel="stylesheet" href="/css/screen.css">
   <meta name="description" content="A consultancy working in the intersection of code and design." />
   <meta name="author" content="Fred Oliveira" />
   <meta charset="utf-8" />
@@ -13,7 +13,8 @@
 <body>
   <div class="container">
     <div class="content">
-      <img alt="Made by Form" src="logo.svg" class="logo" />
+      <!--[if lte IE 8]><img alt="Made by Form" src="logo.png" class="logo" /><![endif]-->
+      <!--[if gt IE 8]><!--><img alt="Made by Form" src="logo.svg" class="logo" /><!--<![endif]-->
       <p>
         We're a consultancy working in the intersection of code and design.
         Our expertise lies in web application and iOS development, user experience design and research.
