Prevent logo from being dragged

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="content">
       <!--[if lte IE 8]><img alt="Made by Form" src="logo.png" class="logo" /><![endif]-->
-      <!--[if gt IE 8]><!--><img alt="Made by Form" src="logo.svg" class="logo" /><!--<![endif]-->
+      <!--[if gt IE 8]><!--><img alt="Made by Form" src="logo.svg" class="logo" draggable="false" /><!--<![endif]-->
       <p>
         We're a consultancy working in the intersection of code and design.
         Our expertise lies in web application and iOS development, user experience design and research.
